--- a/index.html
+++ b/index.html
@@ -10,45 +10,9 @@
   <body>
     <form>
       <label>
-        +380
-        <input
-          data-input-tel
-          type="tel"
-          placeholder="Phone"
-          maxlength="20"
-          pattern="^[+]?[0-9]{9,12}$"
-          required
-        />
-      </label>
-      <label>
-        93, 63, 50, .....
-        <input
-          data-input-tel
-          type="tel"
-          placeholder="Phone"
-          maxlength="20"
-          required
-        />
-      </label>
-      <label>
-        093, 063, 050, .....
-        <input
-          data-input-tel
-          type="tel"
-          placeholder="Phone"
-          maxlength="20"
-          required
-        />
-      </label>
-      <label>
-        Another phone number
-        <input
-          data-input-tel
-          type="tel"
-          placeholder="Phone"
-          maxlength="20"
-          required
-        />
+        Введите номер в указанном формате
+        <input data-input-tel type="tel" placeholder="Phone" maxlength="20" />
+        <!-- pattern="^[+]?[0-9]{9,12}$" -->
       </label>
 
       <input class="submit" type="submit" value="send" />
