--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <form>
       <label>
-        Введите номер в указанном формате
+        <!-- Введите номер в указанном формате -->
         <input data-input-tel type="tel" placeholder="Phone" maxlength="20" />
         <!-- pattern="^[+]?[0-9]{9,12}$" -->
       </label>
