--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
           minlength="8"
           required
         />
+        <input
+          data-input-tel
+          type="tel"
+          placeholder="+380 (__) ___-__-__"
+          maxlength="20"
+          minlength="8"
+          required
+        />
         <!-- pattern="^[+]?[0-9]{9,12}$"
          title="Only numbers please"
         -->
