--- a/index.html
+++ b/index.html
@@ -10,34 +10,32 @@
   <body>
     <form>
       <label>
-        <!-- Введите номер в указанном формате -->
+        ua
         <input
-          data-input-tel
+          data-input-tel-ua
           type="tel"
           placeholder="+380 (__) ___-__-__"
           maxlength="20"
           minlength="8"
           required
         />
+      </label>
+      <label>
+        ru
         <input
-          data-input-tel
+          data-input-tel-ru
           type="tel"
-          placeholder="+380 (__) ___-__-__"
+          placeholder="+7 (___) ___ __ __"
           maxlength="20"
           minlength="8"
           required
         />
-        <!-- pattern="^[+]?[0-9]{9,12}$"
-         title="Only numbers please"
-        -->
       </label>
 
       <button class="submit" type="submit" value="send">send</button>
     </form>
     <script src="https://unpkg.com/imask"></script>
-    <script src="./newMask.js"></script>
-    <!-- <script src="./imask.js"></script> -->
-    <!-- <script src="./ruMask.js"></script> -->
-    <!-- <script src="./uaMask.js"></script> -->
+    <script src="./ruMask.js"></script>
+    <script src="./uaMask.js"></script>
   </body>
 </html>
