--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         />
       </label>
 
-      <button class="submit" type="submit" value="send">send</button>
+      <button class="submit" type="submit">send</button>
     </form>
     <script src="https://unpkg.com/imask"></script>
     <script src="./ruMask.js"></script>
